Fixed dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -484,7 +484,7 @@ Past project
 
 .project-title {
     font-size: 22px;
-    color: #2057a7;
+    color: var(--primary-color);
     margin: 20px 20px 10px;
 }
 
@@ -509,7 +509,7 @@ Past project
     padding: 0 20px;
     margin-bottom: 20px;
     line-height: 1.5;
-    color: #555;
+    color: var(--text-color);
     flex-grow: 1;
 }
 
